--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
         <div class="blocImg">
             <img src="./image/images.jpg" alt="">
         </div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, eveniet!</p>
 </body>
 </html>
